Fix some of the card spacing issues

--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -32,8 +32,14 @@
   transform: translate(-50%, -50%)
 }
 
-.card-content{
+.product-content{
   display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.card-content{
+  display: block;
   flex-direction: row;
   justify-content: center;
 }
